this are my changes

--- a/mariana.html
+++ b/mariana.html
@@ -3,15 +3,33 @@
 <head>
 <title><Mariana></title>
 <style>
-body{background_ :purple:}
-h1 {color:white:
-font-family."courie new":
+body{background-color:purple;}
+h1 {color:white;
+font-family:"courier new";
 font-size:600%}
+a{color: white;
+font-family:"courier new";
+font-size:300%;
+margin:119px;
+}
+a{color: white;
+font-family:"courier new";
+font-size:300%
+}
+a{color: white;
+font-family:"courier new";
+font-size:300%
+}
 </style>
 </head>
 <body>
-<h1 algin="center">Mariana Couture</h1>
-<a href=
+<h1 align=center>Mariana Couture</h1>
+<a href="">Clothes</a>
+<a href="">Accesories</a>
+<a href="">Makeup</a>
+<a href="">Bags</a>
 
+<img src="background3.png" style="position: fixed;bottom: 30px;left: 111px;width: 900px" alt="background">
 
+<p style="float:right;font-size: 400%;">There is everything you can find!</p>
 </body>
